templates/tpl_modified_nova/stylesheet.css
/* ... */
.pd_heading_inforow strong {
  font-weight:600;
}

.pd_shippingrow {
  margin: 25px 0px;
  display: flex;
  font-size:13px;
  line-height:17px;
  font-weight:400;
}
.pd_shippingrow strong {
  font-weight:600;
}
.pd_shipping_icon {
  width:28px;
  font-size:15px;
  line-height:17px;
}
.pd_shipping_image {
  display:inline-block;
  padding: 0 5px 0 0;
}
.pd_shipping_content {
  padding: 0px 0px 0px 0px;
  font-size:13px;
  line-height:17px;
  flex: 1;  
}
.pd_shipping_content a:hover {
  text-decoration:none;
}
.pd_shipping_content a {
  color:#333;
  border-bottom: 1px solid #ccc;
}
.pd_shipping_content a:hover {
  color:#333;
  text-decoration:none;
  border-bottom: 1px solid #ccc;
} 

.pd_offer {
  margin: 25px 0 25px 0;
}
.pd_price {
  position:relative;
  text-align:left;
  padding: 0 0 0 0;
  margin: 0 0 30px 0;
  font-weight:700;
  font-size: 18px;
  line-height:18px;
}
.pd_price_discount {
  color:#e32828;
  font-weight: 400;
  padding: 0 0 5px 0;
  font-size:13px;
  line-height:19px;  
}
#pd_puprice {
  position:relative;
}

.pd_price .standard_price,
.pd_price .special_price,
.pd_price .specialgraduated_price, 
.pd_price .graduated_price {
  color: var(--price_default_color, #434343);
  display:flex;
  align-items:flex-end;
  flex-wrap:wrap;
  padding: 0 0 2px 0;
}
.pd_price .special_price {
  padding: 0 0 2px 50px;
}
.pd_price .specialgraduated_price {
  padding: 0 0 2px 0;
}

.pd_price .vpe,
.pd_price .vpe_with_item_price,
.pd_price .no_price {
  display:block;
  font-weight: 400;
  padding: 1px 0 0 0;
  font-size:11px;
  line-height:15px;
  color:#666;  
}

.pd_price .small_price {
  vertical-align:0px;
  padding: 0 3px 0 0;
  font-weight:400;
  font-size:12px;
  line-height:12px;
}
.pd_price .special_price .small_price,
.pd_price .specialgraduated_price .small_price {
  display:block;
  width:100%;
  padding: 0 0px 1px 0;
  font-size:8px;
  line-height:8px;
} 

.pd_price .old_price {
  float:left;
  display:inline-block;
  font-weight:700;
  font-size: 14px;
  line-height:18px;
  color: var(--price_old_color, #666);
  text-decoration:none;
  padding: 0 0 0 10px;
}
.pd_price .new_price {
  float:left;
  display:inline-block;
  font-weight:700;
  font-size: 18px;
  line-height:18px;
  color: var(--price_new_color, #e32828);
}
.pd_price .item_price {
  float:left;
  display:inline-block;
  font-weight:700;
  font-size: 14px;
  line-height:18px;
  color:#666;
  text-decoration:none;
  padding: 0 0 0 10px;
}
.pd_price .uvp_price {
  float:left;
  display:inline-block;
  font-weight:700;
  font-size: 18px;
  line-height:18px;
}
.pd_price .save_price {
  display: block;
  background: var(--price_save_bg, #e32828);
  color: var(--price_save_color, #fff);
  font-size: 14px;
  line-height: 26px;
  font-weight:700;
  width: 40px;
  text-align: center;
  border-radius: 4px;
  position:absolute;
  top:0px;
  left:0px;
}
.pd_price .save_price_long {
  display:none;
  color: var(--price_new_color, #e32828);
  font-weight: 400;
  padding: 1px 0 0 0;
  font-size:11px;
  line-height:15px; 
}

.pd_tax {
  display:block;
  font-weight: 400;
  text-align:left;
  padding: 1px 0 0 0;
  font-size:11px;
  line-height:15px;
  color:#666;
}
.pd_tax a {
  color:#666;
  border-bottom: 1px solid #ccc;
  text-decoration:none;
}
.pd_tax a:hover {
  border-bottom: 1px solid #ccc;
  text-decoration:none;
}
.pd_expires {
  display:block;
  font-weight: 400;
  text-align:left;
  padding: 1px 0 0 0;
  font-size:11px;
  line-height:15px;
  color: var(--price_new_color, #e32828);
}

.fskmessage {
  margin:40px 0 0px 0;
  position:relative;
  border: none;
  padding: 10px 10px 10px 50px;
  font-size:14px;
  line-height:20px;
  font-weight:400;
  color:#e32828;
  background: #fff3f3;
}
.fskmessage:before {
  font-weight:700;
  content: '18';
  position:absolute;
  width:40px;
  top:0px;
  left:0px;
  bottom: 0px;
  font-size:20px;
  line-height:20px; 
  padding: 0px 0px;
  color:#fff3f3;
  background:#e32828;
  align-items: center;
  justify-content: center;
  display: flex; 
  opacity:0.5;
}

.pd_addtobasket {
  margin: 40px 0px 5px 0px;
  font-size: 14px;
  line-height: 18px;
}
.pd_addtobasket_row {
  display: flex;
  padding: 5px 0px;
  margin: 0px -5px;
  align-items: center;
}
.pd_addtobasket_wish {
  padding: 0 5px 0 5px;
  width: 54px;
}
.pd_addtobasket_wish .cssButton .cssButtonIcon {
  font-size:18px;
}
.pd_addtobasket_cart {
  padding: 0 5px 0 5px;
  flex: 1;
}
.pd_addtobasket_input {
  position:relative;
  padding: 0 5px 0 5px;
  width: 50px;
}
@media only screen and (min-width: 340px) {
  .pd_addtobasket_input { width: 70px; }
}
.pd_addtobasket_input input {
  text-align:center;
  padding: 11px 6px 11px 6px
}
.pd_addtobasket_row_additional {
  display:flex;
  flex-direction:column;
  margin: 0px -5px;
  padding: 0 54px 0 50px;
}
@media only screen and (min-width: 340px) {
  .pd_addtobasket_row_additional { padding: 0 54px 0 70px; }
}

.pd_addtobasket_paypal {
  width:100%;
  padding: 5px 5px;
}
.pd_addtobasket_express {
  width:100%;
  padding: 5px 5px;
  text-align:right;
  line-height: 17px;
}
.pd_addtobasket_row_express {
  display:flex;
  width:100%;
}
.pd_addtobasket_express_link {
  flex:1;
  padding: 5px 0;
  text-align:left;
}
.pd_addtobasket_express_link:last-child {
  text-align:right;
}
.pd_addtobasket_express_link a {
  padding: 3px 0px;
  font-weight:400;
  color:#333;
}
.pd_addtobasket_express_link a:hover {
  color:#333;
  text-decoration:none;
}  

.pd_description_content {

}
.pd_description_content p:first-child {
  margin-top:0px;
}
.pd_description_content h2 {
  font-size:16px;
  line-height:22px;
  font-weight:600;
  margin: 0 0 0 0;
  padding: 0 0 0 0;
  border:none;
}
.pd_description_content h3 {
  font-size:14px;
  line-height:22px;
  margin: 0 0 0 0;
  padding: 0 0 0 0;
  border:none;
}
.pd_description_content ul{
  margin: 12px 0px 12px 20px;
}
.pd_description_content ol{
  margin: 12px 0px 12px 20px;
}
/* ... */

